// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test SYNC with Metadata Fan Device 1`] = `
Object {
  "devices": Array [
    Object {
      "attributes": Object {
        "availableFanSpeeds": Object {
          "ordered": true,
          "speeds": Array [
            Object {
              "speed_name": "0",
              "speed_values": Array [
                Object {
                  "lang": "en",
                  "speed_synonym": Array [
                    "null",
                    "off",
                  ],
                },
              ],
            },
            Object {
              "speed_name": "50",
              "speed_values": Array [
                Object {
                  "lang": "en",
                  "speed_synonym": Array [
                    "slow",
                  ],
                },
              ],
            },
            Object {
              "speed_name": "100",
              "speed_values": Array [
                Object {
                  "lang": "en",
                  "speed_synonym": Array [
                    "full",
                    "fast",
                  ],
                },
              ],
            },
          ],
        },
        "reversible": false,
      },
      "customData": Object {
        "deviceType": "action.devices.types.FAN",
        "inverted": false,
        "itemType": "Dimmer",
        "tfaAck": undefined,
        "tfaPin": undefined,
      },
      "deviceInfo": Object {
        "hwVersion": "2.5.0",
        "manufacturer": "openHAB",
        "model": "My Fan",
        "swVersion": "2.5.0",
      },
      "id": "MyFan",
      "name": Object {
        "defaultNames": Array [
          "My Fan",
        ],
        "name": "My Fan",
        "nicknames": Array [
          "My Fan",
        ],
      },
      "roomHint": undefined,
      "structureHint": undefined,
      "traits": Array [
        "action.devices.traits.OnOff",
        "action.devices.traits.FanSpeed",
      ],
      "type": "action.devices.types.FAN",
      "willReportState": false,
    },
  ],
}
`;

exports[`Test SYNC with Metadata Light Devices 1`] = `
Object {
  "devices": Array [
    Object {
      "attributes": Object {},
      "customData": Object {
        "deviceType": "action.devices.types.LIGHT",
        "inverted": false,
        "itemType": "Switch",
        "tfaAck": undefined,
        "tfaPin": undefined,
      },
      "deviceInfo": Object {
        "hwVersion": "2.5.0",
        "manufacturer": "openHAB",
        "model": "SwitchLight",
        "swVersion": "2.5.0",
      },
      "id": "MySwitch",
      "name": Object {
        "defaultNames": Array [
          "Light Switch",
        ],
        "name": "Light Switch",
        "nicknames": Array [
          "Light Switch",
          "Testlight",
          "Cool Light",
        ],
      },
      "roomHint": undefined,
      "structureHint": undefined,
      "traits": Array [
        "action.devices.traits.OnOff",
      ],
      "type": "action.devices.types.LIGHT",
      "willReportState": false,
    },
    Object {
      "attributes": Object {},
      "customData": Object {
        "deviceType": "action.devices.types.LIGHT",
        "inverted": false,
        "itemType": "Dimmer",
        "tfaAck": undefined,
        "tfaPin": undefined,
      },
      "deviceInfo": Object {
        "hwVersion": "2.5.0",
        "manufacturer": "openHAB",
        "model": "DimmLight",
        "swVersion": "2.5.0",
      },
      "id": "MyDimmer",
      "name": Object {
        "defaultNames": Array [
          "DimmLight",
        ],
        "name": "DimmLight",
        "nicknames": Array [
          "DimmLight",
        ],
      },
      "roomHint": undefined,
      "structureHint": undefined,
      "traits": Array [
        "action.devices.traits.OnOff",
        "action.devices.traits.Brightness",
      ],
      "type": "action.devices.types.LIGHT",
      "willReportState": false,
    },
    Object {
      "attributes": Object {
        "colorModel": "hsv",
      },
      "customData": Object {
        "deviceType": "action.devices.types.LIGHT",
        "inverted": false,
        "itemType": "Color",
        "tfaAck": undefined,
        "tfaPin": undefined,
      },
      "deviceInfo": Object {
        "hwVersion": "2.5.0",
        "manufacturer": "openHAB",
        "model": "ColorLight",
        "swVersion": "2.5.0",
      },
      "id": "MyLight",
      "name": Object {
        "defaultNames": Array [
          "ColorLight",
        ],
        "name": "ColorLight",
        "nicknames": Array [
          "ColorLight",
        ],
      },
      "roomHint": undefined,
      "structureHint": undefined,
      "traits": Array [
        "action.devices.traits.OnOff",
        "action.devices.traits.Brightness",
        "action.devices.traits.ColorSetting",
      ],
      "type": "action.devices.types.LIGHT",
      "willReportState": false,
    },
    Object {
      "attributes": Object {},
      "customData": Object {
        "deviceType": "action.devices.types.LIGHT",
        "inverted": false,
        "itemType": "Switch",
        "tfaAck": undefined,
        "tfaPin": undefined,
      },
      "deviceInfo": Object {
        "hwVersion": "2.5.0",
        "manufacturer": "openHAB",
        "model": "GroupLight",
        "swVersion": "2.5.0",
      },
      "id": "MyLightGroup",
      "name": Object {
        "defaultNames": Array [
          "GroupLight",
        ],
        "name": "GroupLight",
        "nicknames": Array [
          "GroupLight",
        ],
      },
      "roomHint": undefined,
      "structureHint": undefined,
      "traits": Array [
        "action.devices.traits.OnOff",
      ],
      "type": "action.devices.types.LIGHT",
      "willReportState": false,
    },
    Object {
      "attributes": Object {},
      "customData": Object {
        "deviceType": "action.devices.types.LIGHT",
        "inverted": false,
        "itemType": "Dimmer",
        "tfaAck": undefined,
        "tfaPin": undefined,
      },
      "deviceInfo": Object {
        "hwVersion": "2.5.0",
        "manufacturer": "openHAB",
        "model": "GroupDimmer",
        "swVersion": "2.5.0",
      },
      "id": "MyDimmerGroup",
      "name": Object {
        "defaultNames": Array [
          "GroupDimmer",
        ],
        "name": "GroupDimmer",
        "nicknames": Array [
          "GroupDimmer",
        ],
      },
      "roomHint": undefined,
      "structureHint": undefined,
      "traits": Array [
        "action.devices.traits.OnOff",
        "action.devices.traits.Brightness",
      ],
      "type": "action.devices.types.LIGHT",
      "willReportState": false,
    },
    Object {
      "attributes": Object {
        "colorModel": "hsv",
      },
      "customData": Object {
        "deviceType": "action.devices.types.LIGHT",
        "inverted": false,
        "itemType": "Color",
        "tfaAck": undefined,
        "tfaPin": undefined,
      },
      "deviceInfo": Object {
        "hwVersion": "2.5.0",
        "manufacturer": "openHAB",
        "model": "GroupColor",
        "swVersion": "2.5.0",
      },
      "id": "MyColorGroup",
      "name": Object {
        "defaultNames": Array [
          "GroupColor",
        ],
        "name": "GroupColor",
        "nicknames": Array [
          "GroupColor",
        ],
      },
      "roomHint": undefined,
      "structureHint": undefined,
      "traits": Array [
        "action.devices.traits.OnOff",
        "action.devices.traits.Brightness",
        "action.devices.traits.ColorSetting",
      ],
      "type": "action.devices.types.LIGHT",
      "willReportState": false,
    },
  ],
}
`;

exports[`Test SYNC with Metadata Scene Device 1`] = `
Object {
  "devices": Array [
    Object {
      "attributes": Object {
        "sceneReversible": true,
      },
      "customData": Object {
        "deviceType": "action.devices.types.SCENE",
        "inverted": false,
        "itemType": "Switch",
        "tfaAck": undefined,
        "tfaPin": undefined,
      },
      "deviceInfo": Object {
        "hwVersion": "2.5.0",
        "manufacturer": "openHAB",
        "model": "My Scene",
        "swVersion": "2.5.0",
      },
      "id": "MyScene",
      "name": Object {
        "defaultNames": Array [
          "My Scene",
        ],
        "name": "My Scene",
        "nicknames": Array [
          "My Scene",
        ],
      },
      "roomHint": undefined,
      "structureHint": undefined,
      "traits": Array [
        "action.devices.traits.Scene",
      ],
      "type": "action.devices.types.SCENE",
      "willReportState": false,
    },
  ],
}
`;

exports[`Test SYNC with Metadata Thermostat Device 1`] = `
Object {
  "devices": Array [
    Object {
      "attributes": Object {
        "availableThermostatModes": "off,heat,eco,auto",
        "thermostatTemperatureUnit": "C",
      },
      "customData": Object {
        "deviceType": "action.devices.types.THERMOSTAT",
        "itemType": undefined,
        "tfaAck": undefined,
        "tfaPin": undefined,
      },
      "deviceInfo": Object {
        "hwVersion": "2.5.0",
        "manufacturer": "openHAB",
        "model": "My Thermostat",
        "swVersion": "2.5.0",
      },
      "id": "MyThermostat",
      "name": Object {
        "defaultNames": Array [
          "My Thermostat",
        ],
        "name": "My Thermostat",
        "nicknames": Array [
          "My Thermostat",
        ],
      },
      "roomHint": undefined,
      "structureHint": undefined,
      "traits": Array [
        "action.devices.traits.TemperatureSetting",
      ],
      "type": "action.devices.types.THERMOSTAT",
      "willReportState": false,
    },
  ],
}
`;

exports[`Test SYNC with Metadata Thermostat Device 1`] = `
Object {
  "devices": Array [
    Object {
      "attributes": Object {
        "availableThermostatModes": "off,heat,eco,auto",
        "thermostatTemperatureUnit": "C",
      },
      "customData": Object {
        "itemType": "Group",
      },
      "deviceInfo": Object {
        "hwVersion": "2.5.0",
        "manufacturer": "openHAB",
        "model": "Group:MyThermostat",
        "swVersion": "2.5.0",
      },
      "id": "MyThermostat",
      "name": Object {
        "defaultNames": Array [
          "My Thermostat",
        ],
        "name": "My Thermostat",
        "nicknames": Array [
          "My Thermostat",
        ],
      },
      "roomHint": undefined,
      "structureHint": undefined,
      "traits": Array [
        "action.devices.traits.TemperatureSetting",
      ],
      "type": "action.devices.types.THERMOSTAT",
      "willReportState": false,
    },
  ],
}
`;
